Added comments to Demo_DAQ_Reader_Methods

--- a/example/Demo_DAQ_Reader_Methods.ipynb
+++ b/example/Demo_DAQ_Reader_Methods.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Instantating DaqReader object with a data file\n",
     "daqreader = CEDSpike2('../tests/data/daqreaders/cedspike2/example1.smr')"
    ]
   },
@@ -46,6 +47,7 @@
     }
    ],
    "source": [
+    "# Acquiring sample rate from channel 1\n",
     "samplerate = daqreader.samplerate(channel_number=1)\n",
     "print(samplerate)"
    ]
@@ -83,6 +85,7 @@
     }
    ],
    "source": [
+    "# Reading data from channel 21 from index 0 to index 20\n",
     "data = daqreader.readchannel(channel_number=21, start_index=0, end_index=20)\n",
     "for i in data:\n",
     "    print(i)"
@@ -116,6 +119,8 @@
     }
    ],
    "source": [
+    "# Reading event timestamps that are between 40 and 200 seconds\n",
+    "# Time units are in seconds\n",
     "events = daqreader.readevents(channel_number=22, start_time=40, end_time=200)\n",
     "for i in events:\n",
     "    print(i)"
