Get Demo_API_Core working

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x1293ad3d0>,\n",
-       "  <ndi.core.Epoch at 0x1293ad190>,\n",
-       "  <ndi.core.Epoch at 0x1293ad820>],\n",
-       " [<ndi.core.Probe at 0x1293adb20>, <ndi.core.Probe at 0x129326ee0>],\n",
-       " [<ndi.core.Channel at 0x1293adb50>,\n",
-       "  <ndi.core.Channel at 0x1293d6df0>,\n",
-       "  <ndi.core.Channel at 0x1293d6b20>])"
+       "([<ndi.core.Epoch at 0x1294d5d60>,\n",
+       "  <ndi.core.Epoch at 0x1294d5d90>,\n",
+       "  <ndi.core.Epoch at 0x1294d5e50>],\n",
+       " [<ndi.core.Probe at 0x1294d5eb0>, <ndi.core.Probe at 0x129421a90>],\n",
+       " [<ndi.core.Channel at 0x1294d5850>,\n",
+       "  <ndi.core.Channel at 0x12948d1c0>,\n",
+       "  <ndi.core.Channel at 0x12948d8b0>])"
       ]
      },
      "execution_count": 8,
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x1293d6790>,\n",
-       " <ndi.core.Epoch at 0x1293d6f70>,\n",
-       " <ndi.core.Epoch at 0x129390dc0>]"
+       "[<ndi.core.Epoch at 0x110191040>,\n",
+       " <ndi.core.Epoch at 0x1294dd550>,\n",
+       " <ndi.core.Epoch at 0x12948d070>]"
       ]
      },
      "execution_count": 9,
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'a38452dc90cc4dc2a4913aef15fe2e8d', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '2d239ed9c3b8486e92493764581d2d63', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'a38452dc90cc4dc2a4913aef15fe2e8d', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '2d239ed9c3b8486e92493764581d2d63', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '661734c4353045ab9bc9f29b499494e9', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'fdb70613d7a7497f8565b42890c15683', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '661734c4353045ab9bc9f29b499494e9', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'fdb70613d7a7497f8565b42890c15683', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x1293cbc10>,\n",
-       " <ndi.core.Channel at 0x129326b80>,\n",
-       " <ndi.core.Channel at 0x1293d8af0>]"
+       "[<ndi.core.Channel at 0x12c9395b0>,\n",
+       " <ndi.core.Channel at 0x12c939130>,\n",
+       " <ndi.core.Channel at 0x12c939400>]"
       ]
      },
      "execution_count": 11,
@@ -185,9 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.core.Probe at 0x12948d670>]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "by_name = Q('_metadata.name') == 'intra'\n",
     "by_ref = Q('reference') < 2\n",
@@ -199,6 +210,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "og_doc = Document({'number': 1, 'trait': 'realest'}, 'og', 'rapper')\n",
     "exp.add_document(og_doc)"
@@ -206,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,21 +239,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ndi.database.sql.SQL object at 0x12904c910>\n"
+     ]
+    }
+   ],
    "source": [
-    "with deps[2].binary.write_stream() as ws:\n",
-    "    ws.write('Took the G out your waffle, all you got left is your ego.')"
+    "print(deps[2].ctx)\n",
+    "with deps[2].binary.open_write_stream() as ws:\n",
+    "    ws.write(b'Took the G out your waffle, all you got left is your ego.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with deps[2].binary.read_stream() as rs:\n",
+    "with deps[2].binary.open_read_stream() as rs:\n",
     "    rs.read(10)\n",
     "    rs.seek(53)\n",
     "    rs.read()"
@@ -243,18 +270,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dre': 'b65ac968b835481a9cd875e6057cab2a',\n",
+       " 'm&m': '29df399e6f04404192a9412c0bdb0333',\n",
+       " 'gambino': '93cc42bb6b624934a6e7b9651528d9e1'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "og_doc.dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Document' object has no attribute 'dependent_on'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-c05783684662>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdeps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdependent_on\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Document' object has no attribute 'dependent_on'"
+     ]
+    }
+   ],
    "source": [
     "deps[0].dependent_on"
    ]
