improve delete visibility

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x1294d5d60>,\n",
-       "  <ndi.core.Epoch at 0x1294d5d90>,\n",
-       "  <ndi.core.Epoch at 0x1294d5e50>],\n",
-       " [<ndi.core.Probe at 0x1294d5eb0>, <ndi.core.Probe at 0x129421a90>],\n",
-       " [<ndi.core.Channel at 0x1294d5850>,\n",
-       "  <ndi.core.Channel at 0x12948d1c0>,\n",
-       "  <ndi.core.Channel at 0x12948d8b0>])"
+       "([<ndi.core.Epoch at 0x126a5d7c0>,\n",
+       "  <ndi.core.Epoch at 0x126a5d7f0>,\n",
+       "  <ndi.core.Epoch at 0x126a5d370>],\n",
+       " [<ndi.core.Probe at 0x126a5d730>, <ndi.core.Probe at 0x126a5d5b0>],\n",
+       " [<ndi.core.Channel at 0x126a5dc10>,\n",
+       "  <ndi.core.Channel at 0x126a86bb0>,\n",
+       "  <ndi.core.Channel at 0x126a867c0>])"
       ]
      },
      "execution_count": 8,
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x110191040>,\n",
-       " <ndi.core.Epoch at 0x1294dd550>,\n",
-       " <ndi.core.Epoch at 0x12948d070>]"
+       "[<ndi.core.Epoch at 0x126a423d0>,\n",
+       " <ndi.core.Epoch at 0x12662f2e0>,\n",
+       " <ndi.core.Epoch at 0x126a86370>]"
       ]
      },
      "execution_count": 9,
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '661734c4353045ab9bc9f29b499494e9', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'fdb70613d7a7497f8565b42890c15683', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '661734c4353045ab9bc9f29b499494e9', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'fdb70613d7a7497f8565b42890c15683', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '6fe72268e0b74077a906cf7356a56392', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'fd2c435b8576444b82d7e58334ee9003', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '6fe72268e0b74077a906cf7356a56392', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'fd2c435b8576444b82d7e58334ee9003', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x12c9395b0>,\n",
-       " <ndi.core.Channel at 0x12c939130>,\n",
-       " <ndi.core.Channel at 0x12c939400>]"
+       "[<ndi.core.Channel at 0x10d6e9eb0>,\n",
+       " <ndi.core.Channel at 0x126a8f430>,\n",
+       " <ndi.core.Channel at 0x126a8f820>]"
       ]
      },
      "execution_count": 11,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x12948d670>]"
+       "[<ndi.core.Probe at 0x1269a79a0>]"
       ]
      },
      "execution_count": 12,
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.database.sql.SQL object at 0x12904c910>\n"
+      "<ndi.database.sql.SQL object at 0x1266036a0>\n"
      ]
     }
    ],
@@ -276,9 +276,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': 'b65ac968b835481a9cd875e6057cab2a',\n",
-       " 'm&m': '29df399e6f04404192a9412c0bdb0333',\n",
-       " 'gambino': '93cc42bb6b624934a6e7b9651528d9e1'}"
+       "{'dre': '1620648aef79478fb7d0dc5ef5461953',\n",
+       " 'm&m': 'e37e712aa56b4ad7914110ee1b76ca45',\n",
+       " 'gambino': 'fef4a1aae694437fb5688ce3de074d96'}"
       ]
      },
      "execution_count": 17,
@@ -296,26 +296,42 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Document' object has no attribute 'dependent_on'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-c05783684662>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdeps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdependent_on\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Document' object has no attribute 'dependent_on'"
-     ]
+     "data": {
+      "text/plain": [
+       "['f2074b44042447ba83e4fbf5018638ee']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "deps[0].dependent_on"
+    "deps[0].depends_on"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'og',\n",
+       " 'type': 'rapper',\n",
+       " 'experiment_id': '6fe72268e0b74077a906cf7356a56392',\n",
+       " 'parent_id': 'f2074b44042447ba83e4fbf5018638ee',\n",
+       " 'asc_path': ',f2074b44042447ba83e4fbf5018638ee',\n",
+       " 'version_depth': 1,\n",
+       " 'latest_version': True}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "og_doc.number = 0\n",
     "og_doc.save_updates()\n",
@@ -324,9 +340,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'og',\n",
+       " 'type': 'rapper',\n",
+       " 'experiment_id': '6fe72268e0b74077a906cf7356a56392',\n",
+       " 'parent_id': '',\n",
+       " 'asc_path': '',\n",
+       " 'version_depth': 0,\n",
+       " 'latest_version': False}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v0_og_doc = og_doc.get_history()[0]\n",
     "v0_og_doc.metadata"
@@ -334,38 +367,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dre': '1620648aef79478fb7d0dc5ef5461953',\n",
+       " 'm&m': 'e37e712aa56b4ad7914110ee1b76ca45',\n",
+       " 'gambino': 'fef4a1aae694437fb5688ce3de074d96'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v0_og_doc.dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x129f08f10>,\n",
+       " <ndi.document.Document at 0x129f08bb0>,\n",
+       " <ndi.document.Document at 0x129f08580>,\n",
+       " <ndi.document.Document at 0x12c1e7580>,\n",
+       " <ndi.document.Document at 0x12c1e7460>]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "exp.get_document_dependencies()"
+    "print(exp.get_document_dependencies())\n",
+    "print(db.find(Q('_metadata.type') == 'rapper'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "og_doc.delete(force=True, remove_history=True)\n",
-    "exp.get_document_dependencies()"
+    "exp.current.get_document_dependencies()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(exp.current.get_document_dependencies())\n",
+    "db.find(Q('_metadata.type') == 'rapper')"
+   ]
   }
  ],
  "metadata": {
