--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x126a5d7c0>,\n",
-       "  <ndi.core.Epoch at 0x126a5d7f0>,\n",
-       "  <ndi.core.Epoch at 0x126a5d370>],\n",
-       " [<ndi.core.Probe at 0x126a5d730>, <ndi.core.Probe at 0x126a5d5b0>],\n",
-       " [<ndi.core.Channel at 0x126a5dc10>,\n",
-       "  <ndi.core.Channel at 0x126a86bb0>,\n",
-       "  <ndi.core.Channel at 0x126a867c0>])"
+       "([<ndi.core.Epoch at 0x12191a790>,\n",
+       "  <ndi.core.Epoch at 0x12191a7c0>,\n",
+       "  <ndi.core.Epoch at 0x12191a520>],\n",
+       " [<ndi.core.Probe at 0x12191a730>, <ndi.core.Probe at 0x12191ab50>],\n",
+       " [<ndi.core.Channel at 0x12191ac40>,\n",
+       "  <ndi.core.Channel at 0x121944b50>,\n",
+       "  <ndi.core.Channel at 0x121944760>])"
       ]
      },
      "execution_count": 8,
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x126a423d0>,\n",
-       " <ndi.core.Epoch at 0x12662f2e0>,\n",
-       " <ndi.core.Epoch at 0x126a86370>]"
+       "[<ndi.core.Epoch at 0x121890dc0>,\n",
+       " <ndi.core.Epoch at 0x1085a7850>,\n",
+       " <ndi.core.Epoch at 0x1214bc820>]"
       ]
      },
      "execution_count": 9,
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '6fe72268e0b74077a906cf7356a56392', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'fd2c435b8576444b82d7e58334ee9003', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '6fe72268e0b74077a906cf7356a56392', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'fd2c435b8576444b82d7e58334ee9003', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'ad82f8a9fbd944b98973566dfa2de14a', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '397a307f52cf48c092e8fe74bcac91be', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'ad82f8a9fbd944b98973566dfa2de14a', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '397a307f52cf48c092e8fe74bcac91be', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x10d6e9eb0>,\n",
-       " <ndi.core.Channel at 0x126a8f430>,\n",
-       " <ndi.core.Channel at 0x126a8f820>]"
+       "[<ndi.core.Channel at 0x12194b460>,\n",
+       " <ndi.core.Channel at 0x12194b040>,\n",
+       " <ndi.core.Channel at 0x12194b8b0>]"
       ]
      },
      "execution_count": 11,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x1269a79a0>]"
+       "[<ndi.core.Probe at 0x1219399a0>]"
       ]
      },
      "execution_count": 12,
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.database.sql.SQL object at 0x1266036a0>\n"
+      "<ndi.database.sql.SQL object at 0x1214bc640>\n"
      ]
     }
    ],
@@ -276,9 +276,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '1620648aef79478fb7d0dc5ef5461953',\n",
-       " 'm&m': 'e37e712aa56b4ad7914110ee1b76ca45',\n",
-       " 'gambino': 'fef4a1aae694437fb5688ce3de074d96'}"
+       "{'dre': '2c648ef5b88d482a8450d88155eac03a',\n",
+       " 'm&m': '7226146ec9e64d51b47db37a8b0794e1',\n",
+       " 'gambino': '9a23f5be3338412b9e14a995429b69fd'}"
       ]
      },
      "execution_count": 17,
@@ -298,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "['f2074b44042447ba83e4fbf5018638ee']"
+       "['39aa82a58550440caa310d48b3d210aa']"
       ]
      },
      "execution_count": 18,
@@ -320,9 +320,9 @@
       "text/plain": [
        "{'name': 'og',\n",
        " 'type': 'rapper',\n",
-       " 'experiment_id': '6fe72268e0b74077a906cf7356a56392',\n",
-       " 'parent_id': 'f2074b44042447ba83e4fbf5018638ee',\n",
-       " 'asc_path': ',f2074b44042447ba83e4fbf5018638ee',\n",
+       " 'experiment_id': 'ad82f8a9fbd944b98973566dfa2de14a',\n",
+       " 'parent_id': '39aa82a58550440caa310d48b3d210aa',\n",
+       " 'asc_path': ',39aa82a58550440caa310d48b3d210aa',\n",
        " 'version_depth': 1,\n",
        " 'latest_version': True}"
       ]
@@ -348,7 +348,7 @@
       "text/plain": [
        "{'name': 'og',\n",
        " 'type': 'rapper',\n",
-       " 'experiment_id': '6fe72268e0b74077a906cf7356a56392',\n",
+       " 'experiment_id': 'ad82f8a9fbd944b98973566dfa2de14a',\n",
        " 'parent_id': '',\n",
        " 'asc_path': '',\n",
        " 'version_depth': 0,\n",
@@ -373,9 +373,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '1620648aef79478fb7d0dc5ef5461953',\n",
-       " 'm&m': 'e37e712aa56b4ad7914110ee1b76ca45',\n",
-       " 'gambino': 'fef4a1aae694437fb5688ce3de074d96'}"
+       "{'dre': '2c648ef5b88d482a8450d88155eac03a',\n",
+       " 'm&m': '7226146ec9e64d51b47db37a8b0794e1',\n",
+       " 'gambino': '9a23f5be3338412b9e14a995429b69fd'}"
       ]
      },
      "execution_count": 21,
@@ -393,44 +393,30 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<ndi.document.Document at 0x129f08f10>,\n",
-       " <ndi.document.Document at 0x129f08bb0>,\n",
-       " <ndi.document.Document at 0x129f08580>,\n",
-       " <ndi.document.Document at 0x12c1e7580>,\n",
-       " <ndi.document.Document at 0x12c1e7460>]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'og': <ndi.document.Document object at 0x12194bd90>}\n",
+      "---\n",
+      "['dre_v0', 'm&m_v0', 'gambino_v0', 'og_v0', 'og_v1']\n"
+     ]
     }
    ],
    "source": [
     "print(exp.get_document_dependencies())\n",
-    "print(db.find(Q('_metadata.type') == 'rapper'))"
+    "print('---')\n",
+    "print([\n",
+    "    d.metadata['name'] + '_v' + str(d.metadata['version_depth'])\n",
+    "    for d in db.find(Q('_metadata.type') == 'rapper')])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "og_doc.delete(force=True, remove_history=True)\n",
-    "exp.current.get_document_dependencies()"
+    "og_doc.delete(force=True, remove_history=True)"
    ]
   },
   {
@@ -439,19 +425,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "---\n",
+      "[]\n"
+     ]
     }
    ],
    "source": [
     "print(exp.current.get_document_dependencies())\n",
-    "db.find(Q('_metadata.type') == 'rapper')"
+    "print('---')\n",
+    "print([d.metadata['name'] for d in db.find(Q('_metadata.type') == 'rapper')])"
    ]
   }
  ],
