remove bin files and add to git_ignore

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x12191a790>,\n",
-       "  <ndi.core.Epoch at 0x12191a7c0>,\n",
-       "  <ndi.core.Epoch at 0x12191a520>],\n",
-       " [<ndi.core.Probe at 0x12191a730>, <ndi.core.Probe at 0x12191ab50>],\n",
-       " [<ndi.core.Channel at 0x12191ac40>,\n",
-       "  <ndi.core.Channel at 0x121944b50>,\n",
-       "  <ndi.core.Channel at 0x121944760>])"
+       "([<ndi.core.Epoch at 0x1260a3ee0>,\n",
+       "  <ndi.core.Epoch at 0x1260a3dc0>,\n",
+       "  <ndi.core.Epoch at 0x1260a3f10>],\n",
+       " [<ndi.core.Probe at 0x1260a3af0>, <ndi.core.Probe at 0x1260a3fa0>],\n",
+       " [<ndi.core.Channel at 0x1260a3970>,\n",
+       "  <ndi.core.Channel at 0x12605c6a0>,\n",
+       "  <ndi.core.Channel at 0x12605c280>])"
       ]
      },
      "execution_count": 8,
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x121890dc0>,\n",
-       " <ndi.core.Epoch at 0x1085a7850>,\n",
-       " <ndi.core.Epoch at 0x1214bc820>]"
+       "[<ndi.core.Epoch at 0x12605c0d0>,\n",
+       " <ndi.core.Epoch at 0x12605c310>,\n",
+       " <ndi.core.Epoch at 0x126098f10>]"
       ]
      },
      "execution_count": 9,
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'ad82f8a9fbd944b98973566dfa2de14a', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '397a307f52cf48c092e8fe74bcac91be', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'ad82f8a9fbd944b98973566dfa2de14a', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '397a307f52cf48c092e8fe74bcac91be', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'bc0f125f9be047b1b806da7d31bdf4ac', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'f06913a3c2554bba96ac4619eccce95b', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'bc0f125f9be047b1b806da7d31bdf4ac', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'f06913a3c2554bba96ac4619eccce95b', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x12194b460>,\n",
-       " <ndi.core.Channel at 0x12194b040>,\n",
-       " <ndi.core.Channel at 0x12194b8b0>]"
+       "[<ndi.core.Channel at 0x126098850>,\n",
+       " <ndi.core.Channel at 0x125ff1f40>,\n",
+       " <ndi.core.Channel at 0x125ff1b20>]"
       ]
      },
      "execution_count": 11,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x1219399a0>]"
+       "[<ndi.core.Probe at 0x125ff1dc0>]"
       ]
      },
      "execution_count": 12,
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.database.sql.SQL object at 0x1214bc640>\n"
+      "<ndi.database.sql.SQL object at 0x125c1e130>\n"
      ]
     }
    ],
@@ -276,9 +276,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '2c648ef5b88d482a8450d88155eac03a',\n",
-       " 'm&m': '7226146ec9e64d51b47db37a8b0794e1',\n",
-       " 'gambino': '9a23f5be3338412b9e14a995429b69fd'}"
+       "{'dre': 'f7f8800d579a41be86d862ca002e0db7',\n",
+       " 'm&m': '659d32e9f111480a8271be1e6f95b7a1',\n",
+       " 'gambino': '92aaf6b44f8d4e4cb65b17317e4d04ac'}"
       ]
      },
      "execution_count": 17,
@@ -298,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "['39aa82a58550440caa310d48b3d210aa']"
+       "['774d246dac8a4bcfb8ef5bd3444b076d']"
       ]
      },
      "execution_count": 18,
@@ -320,9 +320,9 @@
       "text/plain": [
        "{'name': 'og',\n",
        " 'type': 'rapper',\n",
-       " 'experiment_id': 'ad82f8a9fbd944b98973566dfa2de14a',\n",
-       " 'parent_id': '39aa82a58550440caa310d48b3d210aa',\n",
-       " 'asc_path': ',39aa82a58550440caa310d48b3d210aa',\n",
+       " 'experiment_id': 'bc0f125f9be047b1b806da7d31bdf4ac',\n",
+       " 'parent_id': '774d246dac8a4bcfb8ef5bd3444b076d',\n",
+       " 'asc_path': ',774d246dac8a4bcfb8ef5bd3444b076d',\n",
        " 'version_depth': 1,\n",
        " 'latest_version': True}"
       ]
@@ -348,7 +348,7 @@
       "text/plain": [
        "{'name': 'og',\n",
        " 'type': 'rapper',\n",
-       " 'experiment_id': 'ad82f8a9fbd944b98973566dfa2de14a',\n",
+       " 'experiment_id': 'bc0f125f9be047b1b806da7d31bdf4ac',\n",
        " 'parent_id': '',\n",
        " 'asc_path': '',\n",
        " 'version_depth': 0,\n",
@@ -373,9 +373,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '2c648ef5b88d482a8450d88155eac03a',\n",
-       " 'm&m': '7226146ec9e64d51b47db37a8b0794e1',\n",
-       " 'gambino': '9a23f5be3338412b9e14a995429b69fd'}"
+       "{'dre': 'f7f8800d579a41be86d862ca002e0db7',\n",
+       " 'm&m': '659d32e9f111480a8271be1e6f95b7a1',\n",
+       " 'gambino': '92aaf6b44f8d4e4cb65b17317e4d04ac'}"
       ]
      },
      "execution_count": 21,
@@ -396,9 +396,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'og': <ndi.document.Document object at 0x12194bd90>}\n",
+      "{'og': <ndi.document.Document object at 0x129528520>}\n",
       "---\n",
-      "['dre_v0', 'm&m_v0', 'gambino_v0', 'og_v0', 'og_v1']\n"
+      "['og_v0', 'og_v1', 'dre_v0', 'm&m_v0', 'gambino_v0']\n"
      ]
     }
    ],
@@ -407,7 +407,8 @@
     "print('---')\n",
     "print([\n",
     "    d.metadata['name'] + '_v' + str(d.metadata['version_depth'])\n",
-    "    for d in db.find(Q('_metadata.type') == 'rapper')])"
+    "    for d in db.find(Q('_metadata.type') == 'rapper')\n",
+    "])"
    ]
   },
   {
@@ -437,7 +438,10 @@
    "source": [
     "print(exp.current.get_document_dependencies())\n",
     "print('---')\n",
-    "print([d.metadata['name'] for d in db.find(Q('_metadata.type') == 'rapper')])"
+    "print([\n",
+    "    d.metadata['name'] + '_v' + str(d.metadata['version_depth'])\n",
+    "    for d in db.find(Q('_metadata.type') == 'rapper')\n",
+    "])"
    ]
   }
  ],
