--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x1260a3ee0>,\n",
-       "  <ndi.core.Epoch at 0x1260a3dc0>,\n",
-       "  <ndi.core.Epoch at 0x1260a3f10>],\n",
-       " [<ndi.core.Probe at 0x1260a3af0>, <ndi.core.Probe at 0x1260a3fa0>],\n",
-       " [<ndi.core.Channel at 0x1260a3970>,\n",
-       "  <ndi.core.Channel at 0x12605c6a0>,\n",
-       "  <ndi.core.Channel at 0x12605c280>])"
+       "([<ndi.core.Epoch at 0x12964ed60>,\n",
+       "  <ndi.core.Epoch at 0x12964ed90>,\n",
+       "  <ndi.core.Epoch at 0x12964ee50>],\n",
+       " [<ndi.core.Probe at 0x12964eeb0>, <ndi.core.Probe at 0x12964e940>],\n",
+       " [<ndi.core.Channel at 0x12964e850>,\n",
+       "  <ndi.core.Channel at 0x129608be0>,\n",
+       "  <ndi.core.Channel at 0x12959ddf0>])"
       ]
      },
      "execution_count": 8,
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x12605c0d0>,\n",
-       " <ndi.core.Epoch at 0x12605c310>,\n",
-       " <ndi.core.Epoch at 0x126098f10>]"
+       "[<ndi.core.Epoch at 0x110354eb0>,\n",
+       " <ndi.core.Epoch at 0x1296421f0>,\n",
+       " <ndi.core.Epoch at 0x129642280>]"
       ]
      },
      "execution_count": 9,
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'bc0f125f9be047b1b806da7d31bdf4ac', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'f06913a3c2554bba96ac4619eccce95b', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'bc0f125f9be047b1b806da7d31bdf4ac', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'f06913a3c2554bba96ac4619eccce95b', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'a18d1d4900bc44d7bf1a96227c20105b', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'dc69c94279504bb2ac3fc20681826dea', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'a18d1d4900bc44d7bf1a96227c20105b', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'dc69c94279504bb2ac3fc20681826dea', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x126098850>,\n",
-       " <ndi.core.Channel at 0x125ff1f40>,\n",
-       " <ndi.core.Channel at 0x125ff1b20>]"
+       "[<ndi.core.Channel at 0x129656b20>,\n",
+       " <ndi.core.Channel at 0x1296561c0>,\n",
+       " <ndi.core.Channel at 0x129656730>]"
       ]
      },
      "execution_count": 11,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x125ff1dc0>]"
+       "[<ndi.core.Probe at 0x1296428b0>]"
       ]
      },
      "execution_count": 12,
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.database.sql.SQL object at 0x125c1e130>\n"
+      "<ndi.database.sql.SQL object at 0x1291ca6d0>\n"
      ]
     }
    ],
@@ -276,9 +276,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': 'f7f8800d579a41be86d862ca002e0db7',\n",
-       " 'm&m': '659d32e9f111480a8271be1e6f95b7a1',\n",
-       " 'gambino': '92aaf6b44f8d4e4cb65b17317e4d04ac'}"
+       "{'dre': '2b6974978ac8487ab80f32254d8a6f4d',\n",
+       " 'm&m': '7826df1c31874d0fbe8975e1a937cd27',\n",
+       " 'gambino': '0bd94ad2cb154a479609bacd3bce8f2f'}"
       ]
      },
      "execution_count": 17,
@@ -298,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "['774d246dac8a4bcfb8ef5bd3444b076d']"
+       "['c21673fb45514a3a90c6f9db0a2a2928']"
       ]
      },
      "execution_count": 18,
@@ -320,9 +320,9 @@
       "text/plain": [
        "{'name': 'og',\n",
        " 'type': 'rapper',\n",
-       " 'experiment_id': 'bc0f125f9be047b1b806da7d31bdf4ac',\n",
-       " 'parent_id': '774d246dac8a4bcfb8ef5bd3444b076d',\n",
-       " 'asc_path': ',774d246dac8a4bcfb8ef5bd3444b076d',\n",
+       " 'experiment_id': 'a18d1d4900bc44d7bf1a96227c20105b',\n",
+       " 'parent_id': 'c21673fb45514a3a90c6f9db0a2a2928',\n",
+       " 'asc_path': ',c21673fb45514a3a90c6f9db0a2a2928',\n",
        " 'version_depth': 1,\n",
        " 'latest_version': True}"
       ]
@@ -348,7 +348,7 @@
       "text/plain": [
        "{'name': 'og',\n",
        " 'type': 'rapper',\n",
-       " 'experiment_id': 'bc0f125f9be047b1b806da7d31bdf4ac',\n",
+       " 'experiment_id': 'a18d1d4900bc44d7bf1a96227c20105b',\n",
        " 'parent_id': '',\n",
        " 'asc_path': '',\n",
        " 'version_depth': 0,\n",
@@ -373,9 +373,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': 'f7f8800d579a41be86d862ca002e0db7',\n",
-       " 'm&m': '659d32e9f111480a8271be1e6f95b7a1',\n",
-       " 'gambino': '92aaf6b44f8d4e4cb65b17317e4d04ac'}"
+       "{'dre': '2b6974978ac8487ab80f32254d8a6f4d',\n",
+       " 'm&m': '7826df1c31874d0fbe8975e1a937cd27',\n",
+       " 'gambino': '0bd94ad2cb154a479609bacd3bce8f2f'}"
       ]
      },
      "execution_count": 21,
@@ -396,9 +396,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'og': <ndi.document.Document object at 0x129528520>}\n",
+      "{'og': <ndi.document.Document object at 0x129624880>}\n",
       "---\n",
-      "['og_v0', 'og_v1', 'dre_v0', 'm&m_v0', 'gambino_v0']\n"
+      "['dre_v0', 'm&m_v0', 'gambino_v0', 'og_v0', 'og_v1']\n"
      ]
     }
    ],
