--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -111,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x127bdf1f0>,\n",
-       " <ndi.core.Probe at 0x127bdf3d0>,\n",
-       " <ndi.core.Probe at 0x127c480a0>]"
+       "[<ndi.core.Probe at 0x102fd3700>,\n",
+       " <ndi.core.Probe at 0x11c3567c0>,\n",
+       " <ndi.core.Probe at 0x11c35b730>]"
       ]
      },
      "execution_count": 9,
@@ -155,9 +155,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x127c2b0a0>,\n",
-       " <ndi.document.Document at 0x127c2b850>,\n",
-       " <ndi.document.Document at 0x127c2b5e0>]"
+       "[<ndi.document.Document at 0x11c338ee0>,\n",
+       " <ndi.document.Document at 0x11c2d8640>,\n",
+       " <ndi.document.Document at 0x11c2d8460>]"
       ]
      },
      "execution_count": 11,
@@ -178,23 +178,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x127bdf580>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c4e490>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c4e3a0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c4ed90>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c483a0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c48700>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c29b580>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c2d8f40>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c35b5b0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c35bf10>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c356220>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c356580>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x127bdf580>,\n",
-       " <ndi.core.Channel at 0x127c4e490>,\n",
-       " <ndi.core.Channel at 0x127c4e3a0>,\n",
-       " <ndi.core.Channel at 0x127c4ed90>,\n",
-       " <ndi.core.Channel at 0x127c483a0>,\n",
-       " <ndi.core.Channel at 0x127c48700>]"
+       "[<ndi.core.Channel at 0x11c29b580>,\n",
+       " <ndi.core.Channel at 0x11c2d8f40>,\n",
+       " <ndi.core.Channel at 0x11c35b5b0>,\n",
+       " <ndi.core.Channel at 0x11c35bf10>,\n",
+       " <ndi.core.Channel at 0x11c356220>,\n",
+       " <ndi.core.Channel at 0x11c356580>]"
       ]
      },
      "execution_count": 12,
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x127bdf280>, <ndi.core.Epoch at 0x127c2b100>]"
+       "[<ndi.core.Epoch at 0x11c356cd0>, <ndi.core.Epoch at 0x11c356310>]"
       ]
      },
      "execution_count": 14,
@@ -260,13 +260,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': 'c9b62070d89047298ef4d959103a12da',\n",
+       "  'experiment_id': '99dfef04f1e84458945a64c7af926d4d',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['c9b62070d89047298ef4d959103a12da'],\n",
+       " '_depends_on': ['99dfef04f1e84458945a64c7af926d4d'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x127c6b2b0>}"
+       "{'doc': <ndi.document.Document at 0x11c338f10>}"
       ]
      },
      "execution_count": 17,
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c28ec1e55cdf490aa5a1c23c8d184f23\n"
+      "ff6195965288484892115d6e6454f9fb\n"
      ]
     }
    ],
@@ -414,7 +414,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'c9b62070d89047298ef4d959103a12da',\n",
+       "  'experiment_id': '99dfef04f1e84458945a64c7af926d4d',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -446,7 +446,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '5212c53180dd43d28a8a48b30ef7d1a2',\n",
+       "  'experiment_id': '624b0ac84af54438854a1bce507d51d9',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
