sprint review changes

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -111,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x127bdf1f0>,\n",
-       " <ndi.core.Probe at 0x127bdf3d0>,\n",
-       " <ndi.core.Probe at 0x127c480a0>]"
+       "[<ndi.core.Probe at 0x10ce95b20>,\n",
+       " <ndi.core.Probe at 0x10ceeae80>,\n",
+       " <ndi.core.Probe at 0x10ceeaac0>]"
       ]
      },
      "execution_count": 9,
@@ -131,87 +131,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "channels0 = [\n",
-    "    Channel('p0c0', 0, 'time', 'file0'),\n",
-    "    Channel('p0c1', 1, 'digital_out', 'file0'),\n",
-    "    Channel('p0c2', 2, 'mark', 'file0'),\n",
-    "]\n",
-    "channels1 = [\n",
-    "    Channel('p1c0', 0, 'time', 'file1'),\n",
-    "    Channel('p1c1', 1, 'digital_out', 'file1'),\n",
-    "    Channel('p1c2', 2, 'mark', 'file1'),\n",
-    "]\n",
-    "for c in channels0:\n",
-    "    probes[0].add_channel(c)\n",
-    "for c in channels1:\n",
-    "    probes[1].add_channel(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.document.Document at 0x127c2b0a0>,\n",
-       " <ndi.document.Document at 0x127c2b850>,\n",
-       " <ndi.document.Document at 0x127c2b5e0>]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "probes[0].get_channels()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x127bdf580>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c4e490>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c4e3a0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c4ed90>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c483a0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127c48700>.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.core.Channel at 0x127bdf580>,\n",
-       " <ndi.core.Channel at 0x127c4e490>,\n",
-       " <ndi.core.Channel at 0x127c4e3a0>,\n",
-       " <ndi.core.Channel at 0x127c4ed90>,\n",
-       " <ndi.core.Channel at 0x127c483a0>,\n",
-       " <ndi.core.Channel at 0x127c48700>]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exp.get_channels()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "epochs = [\n",
     "    Epoch(daq_system_ids=[daqs[0].id]),\n",
     "    Epoch(daq_system_ids=[daqs[0].id])\n",
@@ -222,61 +141,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels0 = [\n",
+    "    Channel('p0c0', 0, 'time', 'file0', epoch_id=epochs[0].id),\n",
+    "    Channel('p0c1', 1, 'digital_out', 'file0', epoch_id=epochs[0].id),\n",
+    "    Channel('p0c2', 2, 'mark', 'file0', epoch_id=epochs[0].id),\n",
+    "]\n",
+    "channels1 = [\n",
+    "    Channel('p1c0', 0, 'time', 'file1', epoch_id=epochs[1].id),\n",
+    "    Channel('p1c1', 1, 'digital_out', 'file1', epoch_id=epochs[1].id),\n",
+    "    Channel('p1c2', 2, 'mark', 'file1', epoch_id=epochs[1].id),\n",
+    "]\n",
+    "for c in channels0:\n",
+    "    probes[0].add_channel(c)\n",
+    "for c in channels1:\n",
+    "    probes[1].add_channel(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x127bdf280>, <ndi.core.Epoch at 0x127c2b100>]"
+       "[<ndi.document.Document at 0x121d494f0>,\n",
+       " <ndi.document.Document at 0x121e0f040>,\n",
+       " <ndi.document.Document at 0x121e0f0d0>]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp.get_epochs()"
+    "probes[0].get_channels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No DAQ reader set to <ndi.core.Channel object at 0x121e0f670>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x121e0f610>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x121dfd0d0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x121dfdbe0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x121dfdf10>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x121df8490>.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.core.Channel at 0x121e0f670>,\n",
+       " <ndi.core.Channel at 0x121e0f610>,\n",
+       " <ndi.core.Channel at 0x121dfd0d0>,\n",
+       " <ndi.core.Channel at 0x121dfdbe0>,\n",
+       " <ndi.core.Channel at 0x121dfdf10>,\n",
+       " <ndi.core.Channel at 0x121df8490>]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.get_channels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epoch = exp.get_epochs()[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x121e0f250>,\n",
+       " <ndi.document.Document at 0x121e0ff70>,\n",
+       " <ndi.document.Document at 0x121e0fb50>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
-    "exp.add_document(doc)"
+    "epoch.get_channels()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'name': 'doc',\n",
-       "  'type': 'independent',\n",
-       "  'experiment_id': 'c9b62070d89047298ef4d959103a12da',\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': '',\n",
-       "  'version_depth': 0,\n",
-       "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
-       " '_depends_on': ['c9b62070d89047298ef4d959103a12da'],\n",
-       " 'hello': 'world'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "exp.ctx.find_by_id(doc.id).data"
+    "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
+    "exp.add_document(doc)"
    ]
   },
   {
@@ -287,10 +269,39 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x127c6b2b0>}"
+       "{'_metadata': {'name': 'doc',\n",
+       "  'type': 'independent',\n",
+       "  'experiment_id': '216f998817fb4e938742ef8a32aa6acd',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': ['216f998817fb4e938742ef8a32aa6acd'],\n",
+       " 'hello': 'world'}"
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.ctx.find_by_id(doc.id).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'doc': <ndi.document.Document at 0x121dfde20>}"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c28ec1e55cdf490aa5a1c23c8d184f23\n"
+      "a8eee5106e834b2e8cf9356a4909827a\n"
      ]
     }
    ],
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +339,7 @@
        "{}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +361,7 @@
        "'This object has been deleted.'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -376,24 +387,24 @@
       "text/plain": [
        "[{'_metadata': {'name': 'list-doc',\n",
        "   'type': '',\n",
-       "   'experiment_id': '',\n",
+       "   'experiment_id': '216f998817fb4e938742ef8a32aa6acd',\n",
        "   'parent_id': '',\n",
        "   'asc_path': '',\n",
        "   'version_depth': 0,\n",
        "   'latest_version': True},\n",
        "  '_dependencies': {},\n",
-       "  '_depends_on': [],\n",
+       "  '_depends_on': ['216f998817fb4e938742ef8a32aa6acd'],\n",
        "  'list': ['abc', 'def', 'ghi']}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "doc = Document({\"list\": [\"abc\", \"def\", \"ghi\"]}, 'list-doc')\n",
-    "db.add(doc)\n",
+    "exp.add_document(doc)\n",
     "[d.data for d in db.find(Q('list').contains('def'))]"
    ]
   },
@@ -406,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -414,16 +425,16 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'c9b62070d89047298ef4d959103a12da',\n",
+       "  'experiment_id': '216f998817fb4e938742ef8a32aa6acd',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
+       " '_dependencies': {'list-doc': 'd319b9e960f64fefbd9d89dd5913d04a'},\n",
        " '_depends_on': []}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,15 +449,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
+       "{'_metadata': {'name': 'test_abacadaba',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '5212c53180dd43d28a8a48b30ef7d1a2',\n",
+       "  'experiment_id': '1d17bbe886bb4f1f816642f0a8a06bce',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -455,13 +466,13 @@
        " '_depends_on': []}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Experiment('test_dfjslfjdkf').connect(\n",
+    "Experiment('test_abacadaba').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    load_existing=False\n",
