--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x12964ed60>,\n",
-       "  <ndi.core.Epoch at 0x12964ed90>,\n",
-       "  <ndi.core.Epoch at 0x12964ee50>],\n",
-       " [<ndi.core.Probe at 0x12964eeb0>, <ndi.core.Probe at 0x12964e940>],\n",
-       " [<ndi.core.Channel at 0x12964e850>,\n",
-       "  <ndi.core.Channel at 0x129608be0>,\n",
-       "  <ndi.core.Channel at 0x12959ddf0>])"
+       "([<ndi.core.Epoch at 0x11f326d60>,\n",
+       "  <ndi.core.Epoch at 0x11f326d90>,\n",
+       "  <ndi.core.Epoch at 0x11f326e50>],\n",
+       " [<ndi.core.Probe at 0x11f326eb0>, <ndi.core.Probe at 0x11f326940>],\n",
+       " [<ndi.core.Channel at 0x11f326850>,\n",
+       "  <ndi.core.Channel at 0x11f2de670>,\n",
+       "  <ndi.core.Channel at 0x11f2de7f0>])"
       ]
      },
      "execution_count": 8,
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x110354eb0>,\n",
-       " <ndi.core.Epoch at 0x1296421f0>,\n",
-       " <ndi.core.Epoch at 0x129642280>]"
+       "[<ndi.core.Epoch at 0x11f2dedf0>,\n",
+       " <ndi.core.Epoch at 0x11f2de190>,\n",
+       " <ndi.core.Epoch at 0x105f88700>]"
       ]
      },
      "execution_count": 9,
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'a18d1d4900bc44d7bf1a96227c20105b', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'dc69c94279504bb2ac3fc20681826dea', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'a18d1d4900bc44d7bf1a96227c20105b', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'dc69c94279504bb2ac3fc20681826dea', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '7f8b45bfcd5a4086ba15f5fb7a0173df', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '127b523f097e4474908bd67e85d43cce', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '7f8b45bfcd5a4086ba15f5fb7a0173df', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '127b523f097e4474908bd67e85d43cce', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -169,9 +169,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x129656b20>,\n",
-       " <ndi.core.Channel at 0x1296561c0>,\n",
-       " <ndi.core.Channel at 0x129656730>]"
+       "[<ndi.core.Channel at 0x11f31a2b0>,\n",
+       " <ndi.core.Channel at 0x11f32daf0>,\n",
+       " <ndi.core.Channel at 0x11f32d040>]"
       ]
      },
      "execution_count": 11,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x1296428b0>]"
+       "[<ndi.core.Probe at 0x105f889a0>]"
       ]
      },
      "execution_count": 12,
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.database.sql.SQL object at 0x1291ca6d0>\n"
+      "<ndi.database.sql.SQL object at 0x11eea06a0>\n"
      ]
     }
    ],
@@ -260,12 +260,22 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Took the G'\n",
+      "53\n",
+      "b'ego.'\n"
+     ]
+    }
+   ],
    "source": [
     "with deps[2].binary.open_read_stream() as rs:\n",
-    "    rs.read(10)\n",
-    "    rs.seek(53)\n",
-    "    rs.read()"
+    "    print(rs.read(10))\n",
+    "    print(rs.seek(53))\n",
+    "    print(rs.read())"
    ]
   },
   {
@@ -276,9 +286,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '2b6974978ac8487ab80f32254d8a6f4d',\n",
-       " 'm&m': '7826df1c31874d0fbe8975e1a937cd27',\n",
-       " 'gambino': '0bd94ad2cb154a479609bacd3bce8f2f'}"
+       "{'dre': '4ec946e57fd249c28af96dc7da32ab28',\n",
+       " 'm&m': '208ebbc32bd34bf98ac68921539165ab',\n",
+       " 'gambino': '6b9d956b266e4f27b23f57936fb02166'}"
       ]
      },
      "execution_count": 17,
@@ -298,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "['c21673fb45514a3a90c6f9db0a2a2928']"
+       "['e48492e939c74091bf7c657bb9f97364']"
       ]
      },
      "execution_count": 18,
@@ -318,13 +328,17 @@
     {
      "data": {
       "text/plain": [
-       "{'name': 'og',\n",
-       " 'type': 'rapper',\n",
-       " 'experiment_id': 'a18d1d4900bc44d7bf1a96227c20105b',\n",
-       " 'parent_id': 'c21673fb45514a3a90c6f9db0a2a2928',\n",
-       " 'asc_path': ',c21673fb45514a3a90c6f9db0a2a2928',\n",
-       " 'version_depth': 1,\n",
-       " 'latest_version': True}"
+       "{'_metadata': {'name': 'og',\n",
+       "  'type': 'rapper',\n",
+       "  'experiment_id': '7f8b45bfcd5a4086ba15f5fb7a0173df',\n",
+       "  'parent_id': 'e48492e939c74091bf7c657bb9f97364',\n",
+       "  'asc_path': ',e48492e939c74091bf7c657bb9f97364',\n",
+       "  'version_depth': 1,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': [],\n",
+       " 'number': 0,\n",
+       " 'trait': 'realest'}"
       ]
      },
      "execution_count": 19,
@@ -333,9 +347,9 @@
     }
    ],
    "source": [
-    "og_doc.number = 0\n",
+    "og_doc.data['number'] = 0\n",
     "og_doc.save_updates()\n",
-    "og_doc.metadata"
+    "exp.ctx.find_by_id(og_doc.id).data"
    ]
   },
   {
@@ -346,13 +360,19 @@
     {
      "data": {
       "text/plain": [
-       "{'name': 'og',\n",
-       " 'type': 'rapper',\n",
-       " 'experiment_id': 'a18d1d4900bc44d7bf1a96227c20105b',\n",
-       " 'parent_id': '',\n",
-       " 'asc_path': '',\n",
-       " 'version_depth': 0,\n",
-       " 'latest_version': False}"
+       "{'_metadata': {'name': 'og',\n",
+       "  'type': 'rapper',\n",
+       "  'experiment_id': '7f8b45bfcd5a4086ba15f5fb7a0173df',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': False},\n",
+       " '_dependencies': {'dre': '4ec946e57fd249c28af96dc7da32ab28',\n",
+       "  'm&m': '208ebbc32bd34bf98ac68921539165ab',\n",
+       "  'gambino': '6b9d956b266e4f27b23f57936fb02166'},\n",
+       " '_depends_on': ['7f8b45bfcd5a4086ba15f5fb7a0173df'],\n",
+       " 'number': 0,\n",
+       " 'trait': 'realest'}"
       ]
      },
      "execution_count": 20,
@@ -362,7 +382,7 @@
    ],
    "source": [
     "v0_og_doc = og_doc.get_history()[0]\n",
-    "v0_og_doc.metadata"
+    "v0_og_doc.data"
    ]
   },
   {
@@ -373,9 +393,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': '2b6974978ac8487ab80f32254d8a6f4d',\n",
-       " 'm&m': '7826df1c31874d0fbe8975e1a937cd27',\n",
-       " 'gambino': '0bd94ad2cb154a479609bacd3bce8f2f'}"
+       "{'dre': '4ec946e57fd249c28af96dc7da32ab28',\n",
+       " 'm&m': '208ebbc32bd34bf98ac68921539165ab',\n",
+       " 'gambino': '6b9d956b266e4f27b23f57936fb02166'}"
       ]
      },
      "execution_count": 21,
@@ -396,9 +416,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'og': <ndi.document.Document object at 0x129624880>}\n",
+      "{'og': <ndi.document.Document object at 0x1227a5130>}\n",
       "---\n",
-      "['dre_v0', 'm&m_v0', 'gambino_v0', 'og_v0', 'og_v1']\n"
+      "['dre_v0', 'og_v0', 'm&m_v0', 'og_v1', 'gambino_v0']\n"
      ]
     }
    ],
