--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -22,8 +22,7 @@
    "source": [
     "from ndi import NDI_Object, Document, Experiment, Epoch, Probe, Channel\n",
     "from ndi import DaqSystem, FileNavigator\n",
-    "from ndi.database.sql import SQL as Database\n",
-    "from ndi.database.file_system import BinaryCollection\n",
+    "from ndi.database.file_system import FileSystem as Database, BinaryCollection\n",
     "from ndi.query import Query as Q, AndQuery, OrQuery\n",
     "from ndi.database.utils import print_everything_in, destroy_everything_in\n",
     "from sqlalchemy import and_, or_"
@@ -44,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
+    "db = Database('./test_db')\n",
     "destroy_everything_in(db)"
    ]
   },
@@ -111,9 +110,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x102fd3700>,\n",
-       " <ndi.core.Probe at 0x11c3567c0>,\n",
-       " <ndi.core.Probe at 0x11c35b730>]"
+       "[<ndi.core.Probe at 0x10a9129d0>,\n",
+       " <ndi.core.Probe at 0x1238236d0>,\n",
+       " <ndi.core.Probe at 0x123823520>]"
       ]
      },
      "execution_count": 9,
@@ -155,9 +154,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11c338ee0>,\n",
-       " <ndi.document.Document at 0x11c2d8640>,\n",
-       " <ndi.document.Document at 0x11c2d8460>]"
+       "[<ndi.document.Document at 0x1238568b0>,\n",
+       " <ndi.document.Document at 0x123856cd0>,\n",
+       " <ndi.document.Document at 0x123823fd0>]"
       ]
      },
      "execution_count": 11,
@@ -178,23 +177,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c29b580>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c2d8f40>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c35b5b0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c35bf10>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c356220>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c356580>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x123856fa0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123856700>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123865490>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123865550>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x1238656a0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x123865580>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x11c29b580>,\n",
-       " <ndi.core.Channel at 0x11c2d8f40>,\n",
-       " <ndi.core.Channel at 0x11c35b5b0>,\n",
-       " <ndi.core.Channel at 0x11c35bf10>,\n",
-       " <ndi.core.Channel at 0x11c356220>,\n",
-       " <ndi.core.Channel at 0x11c356580>]"
+       "[<ndi.core.Channel at 0x123856fa0>,\n",
+       " <ndi.core.Channel at 0x123856700>,\n",
+       " <ndi.core.Channel at 0x123865490>,\n",
+       " <ndi.core.Channel at 0x123865550>,\n",
+       " <ndi.core.Channel at 0x1238656a0>,\n",
+       " <ndi.core.Channel at 0x123865580>]"
       ]
      },
      "execution_count": 12,
@@ -228,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x11c356cd0>, <ndi.core.Epoch at 0x11c356310>]"
+       "[<ndi.core.Epoch at 0x123856310>, <ndi.core.Epoch at 0x123856a00>]"
       ]
      },
      "execution_count": 14,
@@ -260,13 +259,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '99dfef04f1e84458945a64c7af926d4d',\n",
+       "  'experiment_id': 'e024736bbb274794b9529934f303a8ec',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['99dfef04f1e84458945a64c7af926d4d'],\n",
+       " '_depends_on': ['e024736bbb274794b9529934f303a8ec'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -287,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x11c338f10>}"
+       "{'doc': <ndi.document.Document at 0x123865be0>}"
       ]
      },
      "execution_count": 17,
@@ -308,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ff6195965288484892115d6e6454f9fb\n"
+      "774861d399c74af9bd3809ea9221eade\n"
      ]
     }
    ],
@@ -414,7 +413,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '99dfef04f1e84458945a64c7af926d4d',\n",
+       "  'experiment_id': 'e024736bbb274794b9529934f303a8ec',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -446,7 +445,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '624b0ac84af54438854a1bce507d51d9',\n",
+       "  'experiment_id': '32fbab9b4f50433eb69230c7baf5b13a',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
